--- a/css/app.styl
+++ b/css/app.styl
@@ -9,14 +9,9 @@ h1, h2, h3
 
 
 body.home
-	background #4e7ac7
-	background-image -webkit-radial-gradient(right top, #34478C 0%, rgba(52,71,140,0) 70%)
-	position: absolute;
-	top: 0;
-	right: 0;
-	left: 0;
-	bottom: 0;
-	min-height: 700px;
+	background #ecf0f1
+	
+
 
 a
 	&:hover
@@ -60,7 +55,8 @@ a
 					margin-right 10px
 	.get-auth0
 		color #fff
-		background: rgba(0,0,0,.4);
+		background #4e7ac7
+		background-image -webkit-radial-gradient(right top, #34478C 0%, rgba(52,71,140,0) 70%)
 		position fixed
 		bottom 0
 		left 0
