--- a/css/app.css
+++ b/css/app.css
@@ -10,14 +10,7 @@ h3 {
   font-weight: lighter;
 }
 body.home {
-  background: #4e7ac7;
-  background-image: -webkit-radial-gradient(right top, #34478c 0%, rgba(52,71,140,0) 70%);
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  bottom: 0;
-  min-height: 700px;
+  background: #ecf0f1;
 }
 a:hover {
   text-decoration: none;
@@ -62,7 +55,8 @@ a:hover {
 }
 .login-page .get-auth0 {
   color: #fff;
-  background: rgba(0,0,0,0.4);
+  background: #4e7ac7;
+  background-image: -webkit-radial-gradient(right top, #34478c 0%, rgba(52,71,140,0) 70%);
   position: fixed;
   bottom: 0;
   left: 0;
