--- a/css/app.styl
+++ b/css/app.styl
@@ -85,6 +85,12 @@ a
 .container
 	max-width 800px
 
+.loading-global
+	position: fixed;
+	top: 20px;
+	right: 20px;
+	opacity: .8;
+
 .files-page
 	header
 		&.site-header
@@ -258,3 +264,30 @@ footer
   }
 }
 
+
+@-webkit-keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+#drop-anywhere {
+  line-height: 500px;
+  text-align: center;
+  color: white;
+  display: none;
+}
+
+#drop-anywhere::before {
+  content: 'Drop to upload!';
+  font-size: 30px;
+  font-weight: bold
+  text-align: center;
+}
+
+#drop-anywhere.show {
+  -webkit-animation: show 300ms;
+}
