--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,5 @@
 body {
   -webkit-font-smoothing: antialiased;
-  min-width: 800px !important;
-  width: 100%;
 }
 h1,
 h2,
@@ -286,6 +284,52 @@ footer a {
 }
 #drop-anywhere.show {
   -webkit-animation: show 300ms;
+}
+.left {
+  float: left;
+}
+.right {
+  float: right;
+}
+@media screen and (max-width: 700px) {
+  body.home {
+    background: #fff;
+  }
+  .login-page .login-box .welcome-badge {
+    width: 100px;
+    height: 100px;
+  }
+  .login-page .login-box .btn.btn-primary {
+    display: block;
+    margin-top: 30px;
+  }
+  .login-page .get-auth0 {
+    min-width: 0;
+    padding: 10px;
+    position: static;
+  }
+  .login-page .get-auth0 h3 span {
+    display: block;
+    -webkit-animation: none;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  .login-page .get-auth0 h3 .btn {
+    margin: 0;
+    -webkit-animation: none;
+  }
+  .get-auth-left {
+    margin-bottom: 30px;
+  }
+  .left,
+  .right {
+    float: none;
+  }
+}
+@media screen and (max-width: 400px) {
+  .get-auth-left {
+    float: none;
+  }
 }
 @-moz-keyframes get_auth0_text {
   0% {
