--- a/css/app.styl
+++ b/css/app.styl
@@ -333,7 +333,17 @@ footer
 
 
 @media screen and (max-width: 400px)
-	
+	.login-info
+		span 
+			display: none
+	table
+		thead, tbody
+			tr th:first-child, tr td:first-child
+				display: none 
+
+			td
+				font-size: 12px;
+
 
 	.get-auth-left
 		float: none;
