--- a/css/app.styl
+++ b/css/app.styl
@@ -336,6 +336,14 @@ footer
 	.login-info
 		span 
 			display: none
+
+	.login-page
+		h1 
+			font-size: 20px;
+		h2 
+			font-size: 14px;
+		.login-box 
+			padding-top: 0;
 	table
 		thead, tbody
 			tr th:first-child, tr td:first-child
